# os

./: .gitignore  COMPLETION_STATUS_MATRIX.json  COMPLETION_STATUS_MATRIX.md  Cargo.toml  README.md  build.rs  index.html  maataa-lipi-runtime-0.1.0-alpha.1.tgz  maataa-maataa-ui-0.1.0-alpha.1.tgz  memory.x  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.cargo/: config.toml
apps/: README.md  manifest.ts
assets/: README.md  demo.wasm  manifest.json
core/: README.md
data/: domain-registry.json  html-prototype-inventory.json  kbs-image-extraction.json  kbs-runtime-board-extraction.json  language-interface-matrix.json  maataa-ecosystem-merkle-tree.json  maataa-ecosystem-wall.json  milestones-vs-current.json  next-5-batch.json  next-in-line.json  plug-and-play-streaming-device.json  product-surface-matrix.json  sovereign-runtime-ascii-tauri.json  support-docs.json  theme-lab-runtime.json
deployment/: golden-image.manifest
doc/: ARCHITECTURE.md  BUILD_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md  RUNTIME_FEDERATION_2026-05-28.md  SYSTEM_MANIFEST.md  TOPOLOGY_SCAN_2026-05-28.md  TOPOLOGY_SCAN_2026-05-28_CORRECTION.md
docs/: DEPLOYMENT.md  DEPLOYMENT_TIER_SCOPE_2026-06-04.md  DOMAINS.md  HTML_UI_INVENTORY.md  IPC_FRAME_SCHEMA.md  MAATAA_CLI.md  MAATAA_OS_UI_MODULES.md  MSAR_FRAME_MATRIX.md  PRODUCTION_HARDENING_MATRIX.md  README.md  REPO_ALIGNMENT_2026-05-28.md  SCAFFOLD.md  STRUCTURE.md  aam-jantaa-launch-strategy.md  api.md  architecture.md  commercialization.md  faq.md  getting-started.md  governed-production.md  observatory.md  (+20 more)
(+518 files in other folders)
