[package]
name = "maataa-os"
version = "0.1.0-alpha.1"
edition = "2021"

[workspace]
members = [".", "crates/hemant-core"]
resolver = "2"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = "0.3.0"

# Add semihosting for QEMU
cortex-m-semihosting = "0.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
